Fix: Remove 'clickable' empty space where user could click edit-profile btn white space to the right. User can only click the text or pencil icon to use btn now. Fix: Update Helpers.js setButtonText to reviewer's recommendation. Fix: Update Index.js setButtonText function usage in each submitBtn function according to reviewer's recommendation.

--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -97,6 +97,8 @@
 }
 
 .profile__edit-btn {
+  display: flex;
+  align-self: flex-start;
   color: #212121;
   font-weight: 500;
   opacity: 70%;
